<resources>
    <string name="app_name">Final project</string>
    <string name="toast">Toast</string>
    <string name="log">log</string>
    <string name="enter_text_to_be_toasted">Enter text to be toasted</string>
    <string name="next_section"><![CDATA[Next section >>]]></string>
    <string name="_0">0</string>
    <string name="x_sup_2_sup">x<sup><small>2</small></sup></string>
    <string name="by_x"><sup><small>1</small></sup>/<sub><small>x</small></sub></string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="gravity">gravity</string>
    <string name="calculator">calculator</string>
    <string name="exit">exit</string>
    <string name="textview">TextView</string>
    <string name="note1"><b>note</b>  you can combine one of the vertical with one of the horizontal gravities
    \nfor example : top-start , bottom-left</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="intent">Intent</string>
    <string name="image">image</string>
    <string name="fire_intent">fire Intent</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="shared_preference">shared preference</string>
    <string name="name">Name</string>
    <string name="pu">public</string>
    <string name="pr">private</string>
    <string name="email">EMail</string>
    <string name="password">Password</string>
    <string name="internal_sorage">internal storage</string>
    <string name="external_storage">external storage</string>
    <string name="folder">Folder</string>
    <string name="save">Save</string>
    <string name="view_data">View Data</string>
    <string name="save_file">Save File</string>
    <string name="first_number">first number</string>
    <string name="second_number">second number</string>
    <string name="none">No value</string>
    <string name="save_to_shared_preference">Save to Shared Preference</string>
    <string name="biew_result">View result</string>
    <string name="even">Even</string>
    <string name="odd">Odd</string>
    <string name="read_file">Read File</string>
    <string name="back">Back</string>
    <string name="file_io">File IO</string>
    <string-array name="logs">
        <item>log-d</item>
        <item>log-i</item>
        <item>log-e</item>
        <item>log-w</item>
    </string-array>
    <string-array name="gravity">
        <item>gravity</item>
        <item>center</item>
        <item>center vertical</item>
        <item>center horizontal</item>
        <item>top</item>
        <item>bottom</item>
        <item>end  <small>(right in arabic left in english)</small></item>
        <item>Start  <small>(left in arabic right in english)</small></item>
    </string-array>
    <string-array name="layout_gravity">
        <item>layout gravity</item>
        <item>center</item>
        <item>center vertical</item>
        <item>center horizontal</item>
        <item>top</item>
        <item>bottom</item>
        <item>end  <small>(right in arabic left in english)</small></item>
        <item>Start  <small>(left in arabic right in english)</small></item>
    </string-array>
    <string-array name="intent">
        <item>want to open</item>
        <item>another activity</item>
        <item>camera</item>
        <item>google</item>
    </string-array>
</resources>
